Tue Nov 30 20:48:06 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_visitor_tmpl_module_inst.cpp:
        * TAO_IDL/ast/ast_visitor_tmpl_module_ref.cpp:

          When updating the global list of current template
          module parameter references (associated with an
          'alias' IDL construct), added a holder for the old
          list, which then is restored (instead of setting
          the list to 0) after the current scope is traversed.
          This change was necessary to handle the case when
          aliased template modules are nested.

Tue Nov 30 18:15:54 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/component_ami_rh_exh.cpp:

          Removed an unused variable.

Tue Nov 30 18:05:30 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:

          Put code generation back in that was inadvertently
          removed in a previous checkin.

Mon Nov 29 19:02:18 UTC 2010  Martin Corino  <corino_m@remedy.nl>

        * tests/Abstract_Interface/client.cpp:
          Fixed test so now it really runs the null-test part.

Mon Nov 29 17:11:52 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_array.cpp:
        * TAO_IDL/be/be_visitor_array/array_ch.cpp:

          Cosmetic changes.

        * TAO_IDL/be/be_visitor_traits.cpp:

          - Removed code that prevented the visitor from finding
            anonymous arrays nested more than one level deep. Thanks
            to Shi John <John dot Shi at acxiom dot com> for
            sending in the IDL example that uncovered the problem.

          - Fixed problem with traits generation for an interface
            that contains itself recursively.

        * tests/IDL_Test/anonymous.idl:

          Added IDL example mentioned above to test coverage.

Mon Nov 29 15:26:46 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
